layout issue reolved accorfing to figma layout

--- a/src/App.css
+++ b/src/App.css
@@ -1,32 +1,32 @@
 @import url('https://fonts.googleapis.com/css2?family=Raleway:wght@200;300;400;500;600;700&display=swap');
 
 .extralight-200 {
-  font-family: 'Raleway', sans-serif;
+  font-family: 'Raleway', sans-serif !important;
   font-weight: 200 !important;
 }
 
 .light-300 {
-  font-family: 'Raleway', sans-serif;
+  font-family: 'Raleway', sans-serif !important;
   font-weight: 300 !important;
 }
 
 .regular-400 {
-  font-family: 'Raleway', sans-serif;
+  font-family: 'Raleway', sans-serif !important;
   font-weight: 400 !important;
 }
 
 .medium-500 {
-  font-family: 'Raleway', sans-serif;
+  font-family: 'Raleway', sans-serif !important;
   font-weight: 500 !important;
 }
 
 .semibold-600 {
-  font-family: 'Raleway', sans-serif;
+  font-family: 'Raleway', sans-serif !important;
   font-weight: 600 !important;
 }
 
 .bold-700 {
-  font-family: 'Raleway', sans-serif;
+  font-family: 'Raleway', sans-serif !important;
   font-weight: 700 !important;
 }
 
@@ -771,7 +771,9 @@ nav ul li .menu-item:hover {
 
 .attribute-value {
   text-align: center;
-  font-size: 12px;
+  /* font-size: 12px; */
+  font-size: 16px;
+  line-height: 18px;
   /* font-family: sans-serif; */
   border: 1px solid black;
   padding: 8px;
@@ -783,7 +785,9 @@ nav ul li .menu-item:hover {
 
 .attribute-value-selected {
   text-align: center;
-  font-size: 12px;
+  /* font-size: 12px; */
+  font-size: 16px;
+  line-height: 18px;
   font-family: sans-serif;
   border: 1px solid black;
   background-color: black;
