--- a/src/containers/cartitems/main-cart.css
+++ b/src/containers/cartitems/main-cart.css
@@ -20,17 +20,21 @@
 }
 
 .main-cart-item-brand {
-    margin: 0 0 0px 0;
+    margin: 0 0 10px 0;
     color: black;
     /* font-weight: bold; */
-    font-size: 24px;
+    /* font-size: 24px; */
+    font-size: 30px;
+    line-height: 27px;
     /* font-family: sans-serif; */
 }
 
 .main-cart-item-name {
-    margin: 0 0 5px 0;
+    margin: 0 0 20px 0;
     color: #000000ee;
-    font-size: 22px;
+    /* font-size: 22px; */
+    font-size: 30px;
+    line-height: 27px;
     /* font-family: sans-serif; */
     padding-top: 0;
 }
@@ -38,7 +42,9 @@
 .main-cart-item-price {
     margin: 0 0 10px 0;
     color: black;
-    font-size: 20px;
+    /* font-size: 20px; */
+    font-size: 24px;
+    line-height: 24px;
     /* font-weight: bold; */
 }
 
@@ -112,7 +118,7 @@
     /* font-weight: bold; */
     justify-content: space-between;
     line-height: 1;
-    padding: 5px 0px;
+    /* padding: 5px 0px; */
 }
 
 .main-cart-counter-control-minus,
@@ -128,8 +134,10 @@
     font-size: 30px;
 }
 
-.main-cart-counter-control-number{
-    font-size: 20px;
+.main-cart-counter-control-number {
+    /* font-size: 20px; */
+    font-size: 24px;
+    line-height: 24px;
 }
 
 .main-cart-item-image-holder {
@@ -143,8 +151,10 @@
     /* height: 100%;
     width: 8vw;
     object-fit: contain; */
-    width: 14vw;
-    height: 14vw;
+    /* width: 14vw;
+    height: 14vw; */
+    width: 250px;
+    height: 250px;
     object-fit: contain;
 }
 
@@ -186,19 +196,21 @@
 .image-controls-holder {
     display: flex;
     flex-direction: row;
-    width: 50px;
+    width: 55px;
     justify-content: space-between;
     position: absolute;
     bottom: 10px;
-    right: 10px;    
+    right: 10px;
 }
 
 .image-controls-holder div {
-    height: 20px;
-    width: 20px;
+    height: 24px;
+    width: 24px;
     background-color: #000000aa;
     color: white;
-    font-size: 10px;
+    font-size: 16px;
+    font-family: 'Raleway', sans-serif !important;
+    font-weight: 500 !important;
     font-family: system-ui;
     display: flex;
     align-items: center;
